[gd_scene load_steps=5 format=3 uid="uid://b6u2xl2vqwepb"]

[ext_resource type="Script" uid="uid://xql4h220pm7x" path="res://scripts/system/game_manager.gd" id="1_rtgv3"]
[ext_resource type="PackedScene" uid="uid://d356pnybfrkk3" path="res://scenes/system/splash_screen_manager.tscn" id="2_mgb3u"]
[ext_resource type="Script" uid="uid://dkw7jwefj3wvr" path="res://scripts/system/transition_manager.gd" id="3_cj5kq"]
[ext_resource type="PackedScene" uid="uid://dnkcnqb5lsyh5" path="res://scenes/player/player_controller.tscn" id="4_player"]

[node name="MainScene" type="Node"]

[node name="Managers" type="Node" parent="."]

[node name="GameManager" type="Node" parent="Managers" node_paths=PackedStringArray("world", "ui")]
script = ExtResource("1_rtgv3")
world = NodePath("../../World")
ui = NodePath("../../UserInterface")
player_scene = ExtResource("4_player")

[node name="SplashScreenManager" parent="Managers" instance=ExtResource("2_mgb3u")]
unique_name_in_owner = true

[node name="TransitionManager" type="CanvasLayer" parent="Managers"]
unique_name_in_owner = true
script = ExtResource("3_cj5kq")

[node name="World" type="Node3D" parent="."]

[node name="UserInterface" type="CanvasLayer" parent="."]
